# easyassets-launcher

./: .env.example  .gitignore  .npmrc  README.md  index.html  installer-license.txt  main.js  package-lock.json  package.json  preload.js
frontend/: index.html  launcher-bridge.js
scripts/: build-win-web.js  build-win.js  create-windows-installer.js  embed-bridge.js  generate-icon.js  package-win.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  remote.json
src-tauri/icons/: README.txt  icon.icns
src-tauri/permissions/: default.toml
src-tauri/src/: cache.rs  commands.rs  download.rs  eaa.rs  lib.rs  main.rs  uefn.rs
utils/: asset-cache.js  eaa-file.js  launcher-download.js  uefn-scanner.js
